Delo na centraliziranem logiranju.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,3 +27,6 @@ management.endpoints.web.base-path=/check
 
 management.endpoint.health.show-details=always
 management.endpoint.metrics.cache.time-to-live=10s
+
+# Centralised logging configuration
+logging.config=classpath:logback.xml
