Dodajanje Graphql lastnosti.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,3 +30,8 @@ management.endpoint.metrics.cache.time-to-live=10s
 
 # Centralised logging configuration
 logging.config=classpath:logback.xml
+
+# GraphQL configuration
+graphql.servlet.mapping=/graphql
+graphql.servlet.enabled=true
+graphql.servlet.corsEnabled=true
