Za deploy na produkcijo.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.port=8083
 
 # Spring configuration
 spring.application.name=komentarji-service
-spring.profiles.active=dev
+spring.profiles.active=prod
 
 spring.datasource.url= ${db_url}
 spring.datasource.username= ${db_username}
